--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: David Shimshoni's Quant Finance Blog
 description: This is David Shimshoni's blog for personal Quantitative Finance projects
 google_analytics:
-theme: minima
+theme: jekyll-theme-minima
